# appcontrol

./: .env.example  .gitignore  AI_ACTION_PLAN.md  AI_DEMO.md  BRANCH_SPECS.md  CHANGELOG.md  CLAUDE.md  COVERAGE.md  Cargo.toml  Makefile  PROGRESS.md  QUICKSTART.md  README.en.md  README.md  RELEASE.md  SECURITY_ARCHITECTURE.md  SECURITY_ROADMAP.md  deny.toml  mkdocs.yml  plan.md
.cargo/: audit.toml
crates/agent/: CLAUDE.md  Cargo.toml
crates/agent/src/: buffer.rs  config.rs  connection.rs  discovery.rs  enroll.rs  executor.rs  log_buffer.rs  main.rs  native_commands.rs  native_runner.rs  platform.rs  scheduler.rs  self_update.rs  service.rs  terminal.rs  tls.rs  trap_listener.rs
crates/agent/src/discovery/: linux.rs  macos.rs  mod.rs  tech_patterns.rs  windows.rs
crates/ai/: Cargo.toml
crates/ai/sample/: discovery-sample.json
crates/ai/src/: architect.rs  config.rs  lib.rs  provider.rs  redactor.rs  render.rs  router.rs  sensitivity.rs  types.rs
crates/backend/: CLAUDE.md  Cargo.toml  build.rs  openapi.json
crates/backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  openapi.rs  startup_repair.rs  win_service.rs
crates/backend/src/ai/: incident.rs  map_gen.rs  mod.rs  provider.rs  rag.rs  schema.rs
crates/backend/src/alerting/: channels.rs  engine.rs  mod.rs
crates/backend/src/api/: activation.rs  agent_update.rs  agents.rs  ai.rs  alerts.rs  annotations.rs  api_keys.rs  approvals.rs  apps.rs  break_glass.rs  catalog.rs  cluster_members.rs  command_params.rs  components.rs  diagnostic.rs  discovery.rs  enrollment.rs  estimates.rs  export.rs  gateways.rs  git.rs  groups.rs  health.rs  history.rs  hostings.rs  import.rs  import_wizard.rs  ingestion.rs  knowledge.rs  links.rs  logs.rs  manual_tasks.rs  map_settings.rs  mod.rs  orchestration.rs  organizations.rs  patterns.rs  permissions.rs  pki_export.rs  profiles.rs  (+9 more)
crates/backend/src/api/discovery/: correlation.rs  draft.rs  enrichment.rs  mod.rs  reports.rs  trigger.rs
crates/backend/src/api/import_wizard/: execution.rs  fetch.rs  mod.rs  preview.rs  types.rs
crates/backend/src/api/reports/: audit.rs  availability.rs  dora.rs  export.rs  incidents.rs  mod.rs
crates/backend/src/api/schedules/: crud.rs  execution.rs  mod.rs  presets.rs  types.rs
crates/backend/src/auth/: api_key.rs  dev.rs  jwt.rs  local.rs  mod.rs  oidc.rs  saml.rs
crates/backend/src/core/: activation.rs  auto_failover.rs  branch.rs  certificate_rotation.rs  cross_site_probe.rs  dag.rs  diagnostic.rs  fsm.rs  heartbeat_batcher.rs  heartbeat_monitor.rs  latency_tracker.rs  mod.rs  notifications.rs  operation_lock.rs  operation_scheduler.rs  permissions.rs  rebuild.rs  resolution.rs  sequencer.rs  snapshot_scheduler.rs  switchover.rs
crates/backend/src/core/switchover/: execute.rs  mod.rs  rollback.rs  validate.rs
crates/backend/src/integrations/: cmdb.rs  flow.rs  git.rs  itsm.rs  jira_sm.rs  mod.rs  servicenow.rs  xl.rs
crates/backend/src/mcp/: mod.rs
crates/backend/src/middleware/: audit.rs  auth.rs  mod.rs  rate_limit.rs  read_only.rs
crates/backend/src/repository/: agents.rs  apps.rs  auth_queries.rs  catalog.rs  cluster_members.rs  components.rs  core_queries.rs  discovery_queries.rs  enrollment.rs  gateway_queries.rs  gateways.rs  hostings.rs  import_queries.rs  manual_tasks.rs  map_settings.rs  misc_queries.rs  mod.rs  org_queries.rs  permissions.rs  queries.rs  report_queries.rs  schedule_queries.rs  sites.rs  startup_queries.rs  switchover_queries.rs  teams.rs  websocket_queries.rs
crates/backend/src/terminal/: mod.rs
crates/backend/src/websocket/: hub.rs  log_subscriptions.rs  mod.rs  mod.rs.tmp.534.1774804123270  pending_requests.rs
crates/backend/tests/: sqlite_e2e.rs  sqlite_real_e2e.rs  sqlite_startup.rs
crates/backend/tests/sqlite_e2e/: common.rs  test_agent_management.rs  test_agent_scheduler.rs  test_app_crud.rs  test_app_type_components.rs  test_audit.rs  test_branch_restart.rs  test_components.rs  test_config_snapshots.rs  test_custom_commands.rs  test_dag.rs  test_diagnostic.rs  test_health.rs  test_incident_lifecycle.rs  test_orchestration.rs  test_org_isolation.rs  test_permissions.rs  test_reports.rs  test_share_links.rs  test_start_stop.rs  test_teams.rs  test_variables.rs  test_websocket_events.rs  test_yaml_import.rs
crates/backend/tests/sqlite_real_e2e/: harness.rs  test_start_stop.rs  test_switchover.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: dag_topo.rs  fsm.rs  permission_resolution.rs
crates/benchmarks/src/: dag_support.rs  lib.rs  permission_support.rs
crates/cli/: CLAUDE.md  Cargo.toml
crates/cli/src/: main.rs
crates/common/: CLAUDE.md  Cargo.toml
crates/common/src/: alerting.rs  fsm.rs  lib.rs  logging.rs  pki.rs  protocol.rs  retransmit.rs  types.rs
crates/e2e-real-tests/: Cargo.toml
crates/e2e-real-tests/scripts/: check_process.sh  check_with_perfdata.sh  start_process.sh  stop_process.sh
crates/e2e-real-tests/src/: lib.rs
crates/e2e-real-tests/tests/: harness.rs  test_failure_detection.rs  test_metrics_extraction.rs  test_pink_branch.rs  test_start_stop.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/e2e/: common.rs  main.rs  test_agent_and_scheduler.rs  test_agent_management.rs  test_app_crud.rs  test_app_type_components.rs  test_audit_trail.rs  test_branch_restart.rs  test_component_operations.rs  test_config_snapshots.rs  test_custom_commands.rs  test_dag_validation.rs  test_diagnostic_advanced.rs  test_diagnostic_rebuild.rs  test_full_start_stop.rs  test_health_endpoints.rs  test_incident_lifecycle.rs  test_orchestration_advanced.rs  test_org_isolation.rs  test_permissions_sharing.rs  test_reports.rs  test_saml_auth.rs  test_share_links_advanced.rs  test_switchover.rs  test_switchover_advanced.rs  test_teams_crud.rs  test_variables_groups.rs  test_websocket_events.rs  test_yaml_import.rs
crates/gateway/: CLAUDE.md  Cargo.toml
crates/gateway/src/: main.rs  rate_limit.rs  registry.rs  router.rs  win_service.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs  protocol.rs  tools.rs
(+615 files in other folders)
