[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/agent",
    "crates/gateway",
    "crates/backend",
    "crates/cli",
    "crates/mcp",
    "crates/e2e-tests",
    "crates/e2e-real-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"

# Pin transitive dependencies to fix security advisories
[workspace.dependencies]
rustls-webpki = ">=0.103.12"
