[package]
name = "appcontrol-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
appcontrol-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
sysinfo = "0.32"
sled = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process", "signal", "fs"] }
libc = "0.2"
