[package]
name = "appcontrol-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "AppControl AI layer — sovereign inference router + architect map builder (agentic ops)"

[[bin]]
name = "appcontrol-ai"
path = "src/bin/main.rs"

[lib]
name = "appcontrol_ai"
path = "src/lib.rs"

[dependencies]
appcontrol-common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
