[package]
name = "appcontrol-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
appcontrol-common = { path = "../common" }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp"] }
dashmap = "5"
tower = "0.4"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
flate2 = "1"
urlencoding = "2"
