[package]
name = "appcontrol-backend"
version.workspace = true
edition = "2021"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
full = ["postgres", "sqlite"]

[dependencies]
appcontrol-common = { path = "../common" }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
hostname = "0.4"
# SQLx with Any driver for runtime database selection + specific drivers via features
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "uuid", "chrono", "json", "migrate", "any"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
tower = "0.4"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
flate2 = "1"
urlencoding = "2"
regex = "1"
serde_yaml = "0.9"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
bcrypt = "0.15"
cron = "0.12"
chrono-tz = "0.10"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
