[package]
name = "appcontrol-cli"
version.workspace = true
edition = "2021"

[dependencies]
appcontrol-common = { path = "../common" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
comfy-table = "7"

[[bin]]
name = "appctl"
path = "src/main.rs"
