[package]
name = "appcontrol-common"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "0.3"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
