[package]
name = "appcontrol-e2e-real"
version = "0.1.0"
edition = "2021"
publish = false

# Real E2E tests: compile and launch actual binaries (backend, gateway, agent)
# with real processes, real health checks, real command execution.
# Run: cargo test -p appcontrol-e2e-real -- --test-threads=1

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
jsonwebtoken = "9"
libc = "0.2"
