[package]
name = "appcontrol-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

# This crate exists only for integration tests.
# Run: cargo test -p appcontrol-e2e-tests

[dependencies]
appcontrol-backend = { path = "../backend" }
appcontrol-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
anyhow = "1"
axum = "0.7"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
base64 = "0.22"
