[package]
name = "appcontrol-e2e-tests"
version.workspace = true
edition = "2021"
publish = false

# Run with PostgreSQL (default):  cargo test -p appcontrol-e2e-tests
# Run with SQLite:                cargo test -p appcontrol-e2e-tests --no-default-features --features sqlite

[features]
default = ["postgres"]
postgres = ["sqlx/postgres", "appcontrol-backend/postgres"]
sqlite = ["sqlx/sqlite", "appcontrol-backend/sqlite"]

[dependencies]
appcontrol-backend = { path = "../backend", default-features = false }
appcontrol-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
anyhow = "1"
axum = "0.7"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
base64 = "0.22"
bcrypt = "0.15"
dashmap = "5"
