[package]
name = "appcontrol-gateway"
version.workspace = true
edition = "2021"

[dependencies]
appcontrol-common = { path = "../common" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rustls-native-certs = "0.7"
hyper-util = { version = "0.1", features = ["tokio"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rcgen = "0.13"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
